<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/include_add_top_bar" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_edit_height"
        android:layout_margin="8dp"
        android:background="@drawable/input"
        android:hint="@string/title_hint"
        android:paddingLeft="8dp" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_edit_height"
        android:layout_margin="8dp"
        android:background="@drawable/input"
        android:hint="@string/photo_hint"
        android:inputType="phone"
        android:maxLength="11"
        android:paddingLeft="8dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="8dp"
        
        android:background="@drawable/input"
        android:paddingLeft="8dp" 
        android:paddingRight="8dp">

        <EditText
            android:id="@+id/edit_describe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/describe_hint"
            android:minLines="4" />

        <GridView
            android:id="@+id/addPic"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/edit_describe"
            android:layout_marginTop="30dp"
            android:horizontalSpacing="4dp"
            android:numColumns="4"
            android:verticalSpacing="4dp" />

        <View
            android:id="@+id/view_helper"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"      
            android:background="#00000000" />

        <LinearLayout
            android:id="@+id/open_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
           
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@id/view_helper"
            android:background="@drawable/selector_edit_pic"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" >

            <ImageView
                android:id="@+id/open_pic"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/open_picture"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/open_pic_tips"
                style="@style/TextTheme.tipstheme_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:gravity="center"
                android:text="@string/open_pic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/take_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
        
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/view_helper"
            android:background="@drawable/selector_edit_pic"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" >

            <ImageView
                android:id="@+id/take_pic"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/take_picture"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/take_pic_tips"
                style="@style/TextTheme.tipstheme_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dip"
                android:gravity="center"
                android:text="@string/take_pic" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>